# osrlib-python

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  LICENSE-OGL.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: adaptations.md  docstring-audit.md  index.md  phase-0-plan.md  phase-1-plan.md  phase-2-plan.md  phase-3-plan.md  phase-4-plan.md  phase-5-plan.md  phase-6-plan.md  phase-7-plan.md  phase-8-plan.md  phase-9-plan.md  spec.md
docs/front-ends/: fastapi-pattern.md  llm-referees.md  tui-crawler.md
docs/getting-started/: building-an-adventure.md  quickstart.md
docs/guides/: authoring-custom-content.md  determinism-saves-replay.md  kernel-a-la-carte.md  listeners-and-flags.md  ruleset-options.md  sessions-commands-events.md  views-and-visibility.md
docs/reference/: rng-streams.md
examples/: __init__.py
examples/fastapi_crawler/: README.md  __init__.py  app.py  content.py
examples/tui_crawler/: README.md  __init__.py  __main__.py  content.py  create.py  quest.py
examples/tui_crawler/scripts/: milestone.txt
src/osrlib/: __init__.py  errors.py  messages.py  persistence.py  versioning.py
src/osrlib/core/: __init__.py  abilities.py  alignment.py  character.py  classes.py  clock.py  combat.py  dice.py  effects.py  events.py  items.py  monsters.py  npc.py  rng.py  ruleset.py  spells.py  tables.py  treasure.py  validation.py
src/osrlib/crawl/: __init__.py  adventure.py  battle.py  commands.py  dungeon.py  encounter.py  events.py  exploration.py  party.py  session.py  views.py
src/osrlib/data/: LICENSE-OGL.md  __init__.py  abilities.json  classes.json  combat_tables.json  encounter_tables.json  equipment.json  languages.json  magic_items.json  monsters.json  spells.json  treasure.json
srd/: %25E2%25A7%25BCOpen_Game_License%25E2%25A7%25BD.md  Ability_Checks.md  Ability_Scores.md  Acolyte.md  Advancement.md  Adventure_Scenarios.md  Adventuring_Gear.md  Adventuring_Parties.md  Alignment.md  Amulet_of_Protection_Against_Scrying.md  Animate_Dead.md  Anti-Magic_Shell.md  Ape%2C_White.md  Armour_and_Shields.md  Awarding_XP.md  Bag_of_Devouring.md  Bag_of_Holding.md  Bandit.md  Basilisk.md  Bat.md  Bear.md  Beetle%2C_Giant.md  Berserker.md  Black_Pudding.md  Bless_%28Blight%29.md  Blink_Dog.md  Boar.md  Boots_of_Levitation.md  Boots_of_Speed.md  Boots_of_Travelling_and_Leaping.md  Brigand.md  Broom_of_Flying.md  Buccaneer.md  Bugbear.md  Caecilia.md  Camel.md  Carcass_Crawler.md  Cat%2C_Great.md  Cave_Locust.md  Centaur.md  (+372 more)
tests/: crawl_fixtures.py  generate_creation_goldens.py  generate_phase2_goldens.py  generate_phase3_goldens.py  generate_phase4_goldens.py  generate_phase5_goldens.py  generate_rng_vectors.py  test_abilities.py  test_advanced_groundwork.py  test_adventure_monsters.py  test_award.py  test_battle.py  test_casting.py  test_character.py  test_classes.py  test_clock.py  test_combat.py  test_combat_properties.py  test_commands.py  test_crawl_properties.py  test_crawl_statistics.py  test_creation_goldens.py  test_dice.py  test_docs_examples.py  test_docs_gates.py  test_documents.py  test_drain.py  test_dungeon.py  test_effects.py  test_encounter.py  test_encounter_data.py  test_events.py  test_events_kernel.py  test_example_crawler.py  test_exploration.py  test_fastapi_crawler.py  test_items.py  test_kernel_checks.py  test_magic_items.py  test_memorization.py  (+17 more)
tests/goldens/: phase1_party.json  phase2_troll_battle.json  phase2_wight_battle.json  phase3_spell_battle.json  phase3_turning.json  phase4_delve.json  phase5_hoards.json  phase5_milestone.json  phase5_npc_parties.json
tools/: __init__.py
tools/docs/: __init__.py  gen_api_reference.py  gen_content_ids.py  gen_licensing.py  gen_message_codes.py  gen_rejection_codes.py  gen_schema_reference.py  rejection_codes.json  rejection_scan.py
tools/release/: check_dist.py  install_smoke.py
tools/srd_compile/: __init__.py  __main__.py  abilities.py  classes.py  combat_tables.py  encounter_tables.py  equipment.py  languages.py  magic_items.py  monsters.py  overrides.py  pipetable.py  spells.py  treasure.py
tools/srd_compile/overrides/: classes.json  encounter_tables.json  magic_items.json  monsters.json
