[project]
name = "osrlib"
version = "1.2.1"
description = "B/X (1981 Basic/Expert) tabletop RPG rules engine for turn-based dungeon crawlers"
readme = "README.md"
# The wheel ships Open Game Content (osrlib/data/*.json and its LICENSE-OGL.md
# copy) beside MIT-licensed code, so the expression names both; the LicenseRef-
# form is PEP 639's escape hatch for licenses off the SPDX list.
license = "MIT AND LicenseRef-OGL-1.0a"
license-files = ["LICENSE", "LICENSE-OGL.md"]
authors = [{ name = "Marsh Macy" }]
requires-python = ">=3.14"
dependencies = ["pydantic>=2"]
keywords = [
    "bx",
    "dungeon-crawler",
    "game-engine",
    "old-school-essentials",
    "osr",
    "rpg",
    "srd",
    "ttrpg",
]
# No `License ::` classifier beside an SPDX expression, per PEP 639. Only 3.14
# carries a version classifier because only 3.14 is tested; future minors earn
# theirs by entering CI.
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Documentation = "https://mmacy.github.io/osrlib-python/"
Repository = "https://github.com/mmacy/osrlib-python"
Issues = "https://github.com/mmacy/osrlib-python/issues"
Changelog = "https://github.com/mmacy/osrlib-python/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "hypothesis>=6",
    "pyright>=1.1.411",
    "pytest>=8",
    "pytest-examples>=0.0.18",
    "ruff>=0.11",
    { include-group = "docs" },
    { include-group = "examples" },
]
# The documentation site's toolchain (mkdocs-material + mkdocstrings and the
# build-time page generators); included by dev so `uv sync` stays one command.
# gen-files and literate-nav are pinned exactly: their next releases (0.6.1 and
# 0.6.3) depend on `properdocs`, an unvetted mkdocs fork that ships an import
# hook redirecting all mkdocs.* imports to itself. Do not bump either pin
# without inspecting the release's dependency set first.
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]
# The example front ends' dependencies (the FastAPI wrapper and its TestClient);
# the package's runtime dependency remains pydantic alone.
examples = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "uvicorn>=0.32",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "B",   # bugbear
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["osrlib"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "examples"]
typeCheckingMode = "basic"
pythonVersion = "3.14"
